# Copyright 2017 The Bazel Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load(":test.bzl", "example_integration_test")

example_integration_test(
    name = "examples_create-react-app",
    npm_packages = {
        "//packages/runfiles:npm_package": "@bazel/runfiles",
    },
    # TODO: figure out why this fails on Windows since setting
    # symlink_node_modules to False in the test WORKSPACE
    tags = ["no-bazelci-windows"],
)

example_integration_test(
    name = "examples_toolchain",
    repositories = {"//:release-core": "rules_nodejs"},
)

example_integration_test(
    name = "examples_closure",
    npm_packages = {
        "//packages/runfiles:npm_package": "@bazel/runfiles",
    },
    # TODO: figure out why this fails on Windows since setting
    # symlink_node_modules to False in the test WORKSPACE
    tags = ["no-bazelci-windows"],
)

example_integration_test(
    name = "examples_parcel",
    # Parcel spawns a subprocess which requires our node-patches
    # but we don't yet have a mechanism on Windows for spawned processes
    # to inherit the --require script needed to install the patches
    tags = ["no-bazelci-windows"],
)

example_integration_test(
    name = "examples_kotlin",
    npm_packages = {
    },
    tags = [
        # Bintray was removed from the internet, and the version of
        # kotlinx-html-js we depend on isn't mirrored anywhere else.
        # See https://github.com/bazelbuild/rules_nodejs/issues/2747
        "manual",
        "no-circleci",
        # Kotlin's kt_js_import relies on a helper written in Python
        # https://github.com/bazelbuild/rules_kotlin/blob/master/kotlin/internal/js/importer.py
        # but python isn't installed on BazelCI windows machines.
        # Failure looks like
        # [0 / 57] [Prepa] Expanding template external/io_bazel_rules_kotlin/kotlin/internal/js/importer.temp [for host]
        # ERROR: D:/temp/tmp-67520fayqgbwmbgd/BUILD.bazel:10:1: Action kotlinx-html-js.js failed (Exit 2)
        # LAUNCHER ERROR: Cannot launch process: "python.exe"
        "no-bazelci-windows",
    ],
)

example_integration_test(
    name = "examples_vue",
    npm_packages = {},
    # TODO: figure out why this fails on Windows since setting
    # symlink_node_modules to False in the test WORKSPACE
    tags = ["no-bazelci-windows"],
)

example_integration_test(
    name = "examples_worker",
    # There are no tests in this example
    bazel_commands = [
        # By default this will build with worker enabled
        "build //:do_work",
        # Build again without the worker
        "build --define=cache_bust=true --strategy=DoWork=standalone //:do_work",
    ],
    npm_packages = {"//packages/worker:npm_package": "@bazel/worker"},
)

example_integration_test(
    name = "examples_angular_bazel_architect",
    timeout = "long",
    bazel_commands = [
        "test ...",
    ],
    owners = [
        "@alan-agius4",
        "@jbedard",
    ],
    tags = [
        # TODO(alexeagle): re-enable when it stops timing out on 4.x branch
        "manual",
    ],
)
