load("@npm_bazel_jasmine//:index.bzl", "jasmine_node_test")

# Test what happens when we depend on the catch-all "node_modules" rule rather
# than declare our dependencies on individual npm packages.
# This is the legacy behavior prior to 0.13, so it also proves backwards-compatibility.
jasmine_node_test(
    name = "test",
    srcs = glob(["*.spec.js"]),
    data = ["@npm//:bin_files"],
    node_modules = "@npm//:node_modules",
)

# Test what happens when only certain NPM packages are in our dependencies.
# These packages and their dependencies are copied to the execroot, but
# the rest are not.
jasmine_node_test(
    name = "fine_grained_test",
    srcs = glob(["*.spec.js"]),
    data = ["@npm//:bin_files"],
    deps = [
        "@npm//jasmine",
        "@npm//typescript",
    ],
)

# For testing from the root workspace of this repository with bazel_integration_test.
filegroup(
    name = "all_files",
    srcs = glob(
        include = ["**/*"],
        exclude = [
            "bazel-out/**/*",
            "dist/**/*",
            "node_modules/**/*",
        ],
    ),
    visibility = ["//visibility:public"],
)
