load("@npm//@bazel/jasmine:index.bzl", "jasmine_node_test")

# Test what happens when only certain NPM packages are in our dependencies.
# These packages and their dependencies are copied to the execroot, but
# the rest are not.
jasmine_node_test(
    name = "fine_grained_test",
    srcs = glob(["*.spec.js"]),
    data = ["@npm//:bin_files"],
    deps = [
        "@npm//jasmine",
        "@npm//typescript",
    ],
)
